# C-Algorithms

./: CMakeLists.txt  Inserctionsort  Inserctionsort.c  README.md  Selectionsort  Selectionsort.c  gitpassword
Estrutura_de_dados/Lista1/: main.c  (+1 more)
Estrutura_de_dados_2/: AVL-Tree  CMakeLists.txt
Estrutura_de_dados_2/Lista_1/: main.c
Estrutura_de_dados_2/Lista_1/Q1/: HeapSort.c  MergeSort.c  QuickSort.c
Estrutura_de_dados_2/Lista_1/Q1 - Heap Merge Quick/: MergeSort.c
Estrutura_de_dados_2/Lista_1/Q1 - Heap Merge Quick/output/: MergeSort  QuickSort
Estrutura_de_dados_2/Lista_1/Q1/output/: HeapSort
Estrutura_de_dados_2/Lista_1/Q2/: main  main.c
Estrutura_de_dados_2/Lista_1/Q2/output/: main
Estrutura_de_dados_2/Lista_1/Q3/: CMakeLists.txt  RadixSort.c
Estrutura_de_dados_2/Lista_1/Q3 - Radix/: RadixSort.c
Estrutura_de_dados_2/Lista_1/Q3/output/: RadixSort
Estrutura_de_dados_2/Lista_1/Q4/: dados.txt  main.c
Estrutura_de_dados_2/Lista_1/Q4/output/: dados.txt  main
Estrutura_de_dados_2/Lista_2/: ABB  AVL  BinaryTree  WordCount  main  test.txt
Estrutura_de_dados_2/Lista_2/ArvoreAVL_Cap8-GilbertFou/Ch08AVL/: Ch8Read.Me  P8AVLADT.h
Estrutura_de_dados_2/Lista_2/Q1-Arvores Binarias e AVL/: AVL-Tree  AVL-Tree.c  AVL-Tree.cpp  BinaryTree.c
Estrutura_de_dados_2/Lista_2/Q2-Arvores ABB e AVL ordem/: ABB.c  AVL.c
Estrutura_de_dados_2/Lista_2/Q3-Forma-Hierarquica/: main.c
Estrutura_de_dados_2/Lista_2/Q3/Teste_Arvore_AVL_Backes/Teste_Arvore_AVL/: Teste_Arvore_AVL.depend  Teste_Arvore_AVL.layout
Estrutura_de_dados_2/Lista_2/Q3/output/: main
Estrutura_de_dados_2/Lista_2/Q4/: main.c
Estrutura_de_dados_2/Lista_2/Q4/output/: main
Estrutura_de_dados_2/Lista_2/Q5/: AVLT.c  AVLT.h  Q5.layout  main.c  teste.txt
Estrutura_de_dados_2/Lista_2/Q5 - Arvore AVL exemplo com texto/: Q5.cbp  Q5.depend  main.c
Estrutura_de_dados_2/Lista_2/Q5-Contagem de Palavras/: WordCount.c  WordCount.h  main.c
Estrutura_de_dados_2/Lista_2/Q6/: main.c
Estrutura_de_dados_2/Lista_2/Q6-Arvore B/: B-tree.c  B-tree.h
Estrutura_de_dados_2/Lista_2/Teste_Arvore_AVL_Backes/Teste_Arvore_AVL/: ArvoreAVL.c  ArvoreAVL.h  main.c
(+204 files in other folders)
