cmake_minimum_required(VERSION 3.26)
project(Estrutura_de_dados_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(Estrutura_de_dados_2

        #Lista_1/Q1/HeapSort.c
        #Lista_1/Q1/MergeSort.c
        #Lista_1/Q1/QuickSort.c

        #Lista_1/Q2/main.c
        #Lista_1/Q3/RadixSort.c
        #Lista_1/Q4/main.c
)
